# claude-code-viewer

./: .gitignore  CHANGELOG.md  HOW_TO_RUN_LOCALLY.md  LAUNCH.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
claude_viewer/: __init__.py  cli.py  main.py  statusline_setup.py
claude_viewer/static/css/: style.css
claude_viewer/static/js/: app.js
claude_viewer/templates/: base.html  conversation.html  index.html  project_view.html
claude_viewer/utils/: jsonl_parser.py
cocomon/: __init__.py  __main__.py  cli.py  main.py  statusline_setup.py
cocomon/static/css/: style.css
cocomon/static/js/: app.js
cocomon/templates/: base.html  conversation.html  index.html  project_view.html
cocomon/utils/: jsonl_parser.py
docs/: live-claude-streaming-concept.md
tests/: test_jsonl_parser_search.py
