[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoview"
description = "Local web UI for searching and controlling Claude Code sessions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Community"},
]
maintainers = [
    {name = "Claude Code Community"},
]
keywords = ["claude", "claude-code", "ai", "conversation", "viewer", "web", "local-first", "cocoview"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Environment :: Web Environment",
]
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2,<4.0.0",
    "aiofiles>=23.2.1",
    "markdown>=3.5.1,<4.0.0",
    "pygments>=2.16.1,<3.0.0",
    "qrcode>=7.4,<9.0",
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/gdagitrep/claude-code-viewer"
Documentation = "https://github.com/gdagitrep/claude-code-viewer#readme"
Repository = "https://github.com/gdagitrep/claude-code-viewer.git"
"Bug Reports" = "https://github.com/gdagitrep/claude-code-viewer/issues"

[project.scripts]
cocoview = "claude_viewer.cli:main"
claude-viewer = "claude_viewer.cli:main"

[tool.setuptools]
packages = ["claude_viewer", "claude_viewer.utils"]

[tool.setuptools.package-data]
claude_viewer = ["static/css/*.css", "static/js/*.js", "templates/*.html"]

[tool.setuptools_scm]
write_to = "claude_viewer/_version.py"
